--- a/src/style.css
+++ b/src/style.css
@@ -1,167 +1,186 @@
 * {
-    padding: 0px;
-    margin: 0px;
+  margin: 0px;
+  padding: 0px;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 header {
-    position: relative;
-    width: 100vw;
-    height: 100px;
+  padding: 30px 0;
+  text-align: center;
 }
 
-header > h1 {
-    position: absolute;
-    left: 40px;
-    top: 50%;
-    transform: translateY(-50%);
+header #todo-input {
+  margin-left: 18px;
+  margin-top: 30px;
+  width: 45%;
+  height: 30px;
+
+  font-size: 28px;
+  
+  border: none;
+  border-bottom: 2px solid rgb(184, 184, 184);
 }
 
-header > #add_button {
-    position: absolute;
-    display: inline-block;
-    text-decoration: none;
+header #todo-input:focus {
+  outline: none;
 
-    font-size: 30px;
-    font-weight: 530;
-    border: 2px solid green;
-    color: green;
-    background: none;
-    border-radius: 10px;
-    box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1);
-    cursor: pointer;
-
-    width: 100px;
-    height: 40px;
-    right: 40px;
-    top: 50%;
-    transform: translateY(-50%);
+  animation: slide 1s forwards;
 }
 
-header > #add_button:active {
-    border: none;
-    background-color: green;
-    color: white;
+@keyframes slide {
+  from {
+    border-bottom: 2px solid rgb(184, 184, 184);
+  }
+  to {
+    border-bottom: 2px solid #BDECB6;
+  }
+}
+
+header #todo-button {
+  width: 40px;
+  height: 40px;
+  margin-left: 30px;
+  border: none;
+  border-radius: 50%;
+
+  background-color: #BDECB6;
+  color: rgb(52, 52, 52);
+  font-weight: 300;
+  font-size: 25px;
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+}
+
+header #todo-button:active {
+  box-shadow: rgba(0, 0, 0, 0.06) 0px 2px 4px 0px inset;
 }
 
 main {
-    display: flex;
-    flex-direction: column;
-    margin-top: 70px;
-    height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
 
-main > #todo {
-    position: flex;
-    width: auto;
-    height: 100vh;
+main div {
+  position: relative;
+  width: 65%;
+  height: 50px;
+
+  margin: 5px auto;
+  border: 1px solid rgb(52, 52, 52);
+  border-radius: 10px;
+
+  box-shadow: rgba(0, 0, 0, 0.15) 0px 3px 3px 0px;
 }
 
-main > #todo > .will_do {
-    position: relative;
-    display: none;
-    margin: 10px 0;
-    width: 500px;
-    height: 60px;
-
-    left: 50%;
-    transform: translateX(-50%);
-
-    list-style: none;
-    border: 2px solid black;
-    border-radius: 10px;
-    box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.3);
+main div input[type=text] {
+  border: none;
+  font-size: 18px;
+  width: 100%;
 }
 
-main > #todo > .will_do > .checkbox {
-    position: relative;
-    display: block;
-    
-    left: 15px;
-    top: 50%;
-    transform: translateY(-50%);
+main div input[type=text]:focus {
+  outline: none;
 }
 
-main > #todo > .will_do > .checkbox > input[type=checkbox] {
-    position: absolute;
-    width: 0;
-    height: 0;
-    opacity: 0;
+div .todo-content, div .edit-button, div .delete-button {
+  position: absolute;
+  display: inline-block;
+  top: 50%;
+  transform: translateY(-50%);
 }
 
-main > #todo > .will_do > .checkbox > .on_check {
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-
-    width: 30px;
-    height: 30px;
-    background: none;
-    border: 2px solid black;
-    border-radius: 50%;
+/* 체크 박스 */
+div .todo-check-box {
+  display: block;
+  position: relative;
+  margin: 5px;
 }
 
-main > #todo > .will_do > .checkbox > input[type=checkbox]:checked + .on_check {
-    background-color: green;
-    border: 2px solid green;
+div .todo-check {
+  height: 0;
+  width: 0;
+  display:block;
+  opacity: 0;
 }
 
-.on_check::after {
-    content: "";
-    position: absolute;
-    display: none;
+div .todo-check-custom {
+  position: absolute;
+  width: 40px; 
+  height: 40px;
+  top: 0;
+  left: 0;
 }
 
-main > #todo > .will_do > .checkbox > input[type=checkbox]:checked + .on_check::after {
-    display: block;
+div .todo-check-custom::after {
+  content: "";
 }
 
-main > #todo > .will_do > .checkbox > .on_check::after {
-    width: 5px;
-    height: 14px;
+div .todo-check + .todo-check-custom::after {
+  display: block;
+  width: 10px;
+  height: 20px;
+  border: solid gray;
+  border-width: 0 4px 4px 0;
+  margin-left: 12px;
+  margin-top: 4px;
 
-    left: 11px;
-    top: 20%;
-
-    border: solid white;
-    border-width: 0 3px 3px 0;
-    transform: rotate(45deg);
+  transform: rotate(45deg);
 }
 
-main > #todo > .will_do > input[type=text] {
-    position: absolute;
-    font-size: 25px;
+div .todo-check:checked + .todo-check-custom::after {
+  display: block;
+  width: 10px;
+  height: 20px;
+  border: solid green;
+  border-width: 0 4px 4px 0;
+  margin-left: 12px;
+  margin-top: 4px;
 
-    left: 100px;
-    top: 50%;
-    transform: translateY(-50%);
-
-    width: 350px;
-
-    border: none;
+  transform: rotate(45deg);
 }
 
-main > #todo > .will_do > input[type=text]:focus {
-    outline: none;
-    border-bottom: 1px solid rgb(192, 192, 192);
+/* 할 일 텍스트 */
+div .todo-content {
+  font-size: 18px;
+  left: 55px;
+  top: 50%;
+  transform: translateY(-50%);
+
+  width: 70%;
+
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space:nowrap;
 }
 
-main > #todo > .will_do > input[type=text]:disabled {
-    background: none;
+div .edit-button, div .delete-button {
+  width: 30px;
+  height: 30px;
+  border: none;
+  background-color: white;
 }
 
-main > #todo > .will_do > button {
-    position: absolute;
-    width: 20px;
-    height: 20px;
-
-    font-weight: 700;
-    background: none;
-    border: none;
-    border-radius: 50%;
-
-    right: 0px;
+div .edit-button {
+  right: 55px;
 }
 
-main > #todo > .will_do > button:active {
-    color: green;
+div .delete-button {
+  right: 1%;
+}
+
+div .edit-button img, div .delete-button img {
+  width: 30px;
+  height: 30px;
+}
+
+div .delete-button:active, div .edit-button:active {
+  box-shadow: rgb(204, 219, 232) 3px 3px 6px 0px inset, rgba(255, 255, 255, 0.5) -3px -3px 6px 1px inset;
+}
+
+@media (max-width: 720px) {
+  main {
+    width: 100%;
+  }
+  .todo-content {
+    max-width: 55%;
+  }
 }
